# golfstar-booker

./: .env.example  README.md  pyproject.toml
golfstar_booker/: __main__.py
golfstar_booker/api/: __init__.py  client.py
golfstar_booker/cli/: app.py
golfstar_booker/models/: __init__.py  course.py  teetime.py
