[project]
name = "golfstar-booker"
authors = [{ name = "Fredrik Stockman" }]
version = "0.1.0"
description = "Find and book available tee times at Golfstar golf courses"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "python-dateutil>=2.9.0.post0",
    "rich>=14.1.0",
    "typer>=0.17.4",
]

[project.scripts]
golfstar = "golfstar_booker.cli.app:app"
